# Oleg-Job-Agent

./: .env.example  .gitignore  CROSS_PLATFORM_INSTALL.md  CUSTOMIZING_JOB_CRITERIA.md  FIREFOX_EXTENSION_REMOVAL.md  NEXT_STEPS.md  NEXT_STEPS_SEAMLESS.md  NON_TOKEN_APPROACH.md  PLAN_TO_10.md  README.md  SYSTEM_OVERVIEW.md  pyproject.toml
firefox_extension/: README.md  background.js  content_compose.js  content_messaging.js  content_search.js  manifest.json  popup.css  popup.html  popup.js
job_agent/: __init__.py
scripts/: run_dashboard_unix.sh  run_dashboard_windows.ps1  run_once_unix.sh  run_once_windows.ps1  setup_unix.sh  setup_windows.ps1
src/job_agent/: auto_loop.py  cli.py  company_discovery.py  config.py  criteria.py  dashboard.py  drafting.py  firefox_extension_host.py  history.py  job_pages.py  job_search.py  linkedin.py  linkedin_extension_bridge.py  llm_provider.py  models.py  ollama_runtime.py  reports.py  scheduler.py  scorecard.py  status.py  storage.py  workflow.py
tests/: test_auto_loop.py  test_company_discovery.py  test_config.py  test_dashboard.py  test_drafting.py  test_firefox_extension_host.py  test_history.py  test_job_pages.py  test_job_search.py  test_linkedin.py  test_linkedin_extension_bridge.py  test_llm_provider.py  test_ollama_runtime.py  test_repo_import_path.py  test_reports.py  test_scheduler.py  test_scorecard.py  test_status.py  test_workflow.py
